--- a/BlogRNApp/ios/BlogRNApp/Info.plist
+++ b/BlogRNApp/ios/BlogRNApp/Info.plist
@@ -53,6 +53,10 @@
 			<dict>
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
 				<true/>
+      	<key>NSIncludesSubdomains</key>
+      	<true/>
+      	<key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
+      	<true/>
 			</dict>
 		</dict>
 	</dict>
