--- a/BlogRNApp/package.json
+++ b/BlogRNApp/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "axios": "^0.18.0",
     "react": "16.8.3",
-    "react-native": "0.59.3"
+    "react-native": "0.59.3",
+    "react-native-gesture-handler": "^1.1.0",
+    "react-navigation": "^3.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.0",
