--- a/BlogRNApp/package.json
+++ b/BlogRNApp/package.json
@@ -11,7 +11,8 @@
     "react": "16.8.3",
     "react-native": "0.59.3",
     "react-native-gesture-handler": "^1.1.0",
-    "react-navigation": "^3.8.1"
+    "react-navigation": "^3.8.1",
+    "zakiactivityindicator": "^1.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.4.0",
