--- a/BlogRNApp/package.json
+++ b/BlogRNApp/package.json
@@ -10,9 +10,9 @@
     "axios": "^0.18.0",
     "react": "16.8.3",
     "react-native": "0.59.3",
-    "react-native-gesture-handler": "^1.1.0",
-    "react-navigation": "^3.8.1",
-    "zakiactivityindicator": "^1.0.5"
+    "react-native-gesture-handler": "1.1.0",
+    "react-navigation": "3.8.1",
+    "zakiactivityindicator": "1.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.4.0",
